--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janet Lin's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+
 </head>
 <body>
-    Hello
-    <script src="script.js"></script>
+    <div id="cover">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Explore my work and experience in data science</p>
+    </div>
+    <header>
+        <h1>Your Name</h1>
+        <p>Data Science Engineer Portfolio</p>
+    </header>
+    <nav>
+        <a href="#about"><img src="about-icon.png" alt="About Icon"> About</a> 
+        <a href="#projects"><img src="projects-icon.png" alt="Projects Icon"> Projects</a> 
+        <a href="#contact"><img src="contact-icon.png" alt="Contact Icon"> Contact</a> 
+    </nav>
+    <section id="about">
+        <h2>About Me</h2>
+        <img src="" alt="About Me Image"> <!-- Replace 'about-me-image.jpg' with the path to your image -->
+        <p>Insert your introduction and information about your background here.</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Insert information about your projects and any related links or demos here.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Insert your contact information and any relevant forms or links here.</p>
+    </section>
+    <footer>
+        <p>Copyright &copy; 2024 by Janet Lin. All rights reserved.</p>
+        
+    </footer>
+
 </body>
 </html>
