--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile.heic" alt="Janet Lin profile picture" />
+        <img src="./assets/profile.jpg" alt="Janet Lin profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -85,7 +85,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/IMG_4893.jpg"
+            src="./assets/IMG_1057.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -362,22 +362,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project-1.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Triton AI Autonomous Racing Kart</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Janeiii/UCSD-HDSI-Autonomous-SP-2023'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/aashishbhole/evgokart-slam/raw/main/media/demo.gif'"
               >
                 Live Demo
               </button>
@@ -386,22 +386,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project-2.jpg"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Stock Market Data Modeling</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Janeiii/datahacks-2021'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://yu-lily.github.io/datahacks-2021-report/'"
               >
                 Live Demo
               </button>
@@ -410,27 +410,28 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Full Stack IOS App Development - Instagram </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Janeiii/Codepath---Parstagram'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Janeiii/Codepath---Parstagram'"
               >
                 Live Demo
               </button>
             </div>
           </div>
+          
         </div>
       </div>
       <img
