--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
                 </article>
             </div>
-            </div>
+          </div>
           <div class="details-container">
             <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
@@ -343,8 +343,58 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              
             </div>
           </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Languages</h2>
+            <div class="article-container">
+                <article>
+                <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                />
+                <div>
+                    <h3>English</h3>
+                    <p>Fluent</p>
+                </div>
+                </article>
+                <article>
+                <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                />
+                <div>
+                    <h3>Cantonese</h3>
+                    <p>Fluent</p>
+                </div>
+                </article>
+                <article>
+                <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                />
+                <div>
+                    <h3>Mandarin</h3>
+                    <p>Fluent</p>
+                </div>
+                </article>
+                <article>
+                <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                />
+                <div>
+                    <h3>Korean</h3>
+                    <p>Advanced</p>
+                </div>
+                </article>
+                </div>
+            </div>
         </div>
       </div>
       <img
