--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Janet Lin</h1>
-        <p class="section__text__p2">Data Engineer</p>
+        <p class="section__text__p2">Data Engineer <br>
+          Software Enginner <br>
+          Goal-Achiever <br>
+        </p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
