--- a/index.html
+++ b/index.html
@@ -111,9 +111,14 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.S in Data Science<br /></p>
+              <p>B.S in Data Science<br />
+              & <br>
+              CIS - Programming in C/C++ Certificate
+            </p>
+
             </div>
           </div>
+          
           <div class="text-container">
             <p>
                 My name is Janet. I recently graduated from the University of California, San Diego with a Bachelor of Science degree in Data Science, 
