--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Software Engineering<br />Data Engineer</p>
+              <p>4+ years Software Engineering<br><br />
+                3+ years Professional Administrative Data Management <br><br/>
+                2+ years Professional Data Engineering <br>
+
+              </p>
             </div>
             <div class="details-container">
               <img
